--- a/BookStore/src/main/resources/templates/home/user-login.html
+++ b/BookStore/src/main/resources/templates/home/user-login.html
@@ -14,7 +14,7 @@
      <form action='/userlogin/login' method='post'>
        <div class='dvlog'>
          <label class='la' style='color:blue'>Enter user name</label><br>
-         <input type='text' name='userid' value="rehan123" class='tblog' required>
+         <input type='text' name='userid' value="userID" class='tblog' required>
        </div>
        <div class='dvlog'>
          <label class='la'>Enter password</label><br>
